--- a/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
+++ b/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
@@ -63,52 +63,53 @@
 {
     background: transparent;
     border: none;
-    color: #666666;
     text-align: left;
-    font-size: 12px;
     line-height: 16px;
     padding-left: 12px;
     padding-right: 12px;
+    font-weight: 400;
+    color: #FF616366; /*colorToken.text-secondary*/
+    font-size: 10px;
 }
 
 #bTitle:enabled:checked
 {
-    icon: url(:/images/themed/light/chevron-down_default.svg);
+    icon: url(:/images/themed/light/chevron-down_default.svg); /*replaceThemeToken*/
 }
 
 #bTitle:enabled:!checked
 {
-    icon: url(:/images/themed/light/chevron-up_default.svg);
+    icon: url(:/images/themed/light/chevron-up_default.svg); /*replaceThemeToken*/
 }
 
 #bTitle:enabled:hover:checked
 {
-    icon: url(:/images/themed/light/chevron-down_hover.svg);
+    icon: url(:/images/themed/light/chevron-down_hover.svg); /*replaceThemeToken*/
 }
 
 #bTitle:enabled:hover:!checked
 {
-    icon: url(:/images/themed/light/chevron-up_hover.svg);
+    icon: url(:/images/themed/light/chevron-up_hover.svg); /*replaceThemeToken*/
 }
 
 #bTitle:enabled:pressed:checked
 {
-    icon: url(:/images/themed/light/chevron-down_press.svg);
+    icon: url(:/images/themed/light/chevron-down_press.svg); /*replaceThemeToken*/
 }
 
 #bTitle:enabled:pressed:!checked
 {
-   icon: url(:/images/themed/light/chevron-up_press.svg);
+   icon: url(:/images/themed/light/chevron-up_press.svg); /*replaceThemeToken*/
 }
 
 #bTitle:!enabled:checked
 {
-    icon: url(:/images/themed/light/chevron-down_disabled.svg);
+    icon: url(:/images/themed/light/chevron-down_disabled.svg); /*replaceThemeToken*/
 }
 
 #bTitle:!enabled:!checked
 {
-    icon: url(:/images/themed/light/chevron-up_disabled.svg);
+    icon: url(:/images/themed/light/chevron-up_disabled.svg); /*replaceThemeToken*/
 }
 
 #gbMediaType QFrame
@@ -124,13 +125,13 @@
 
 #gbMediaType QPushButton
 {
-    font-size: 14px;
-    color: #15191F;
+    font-size: 12px;
+    color: #FF616366; /*colorToken.text-secondary*/
     border: none;
     text-align: left;
     padding-left: -1px;
     padding-right: 0px;
-    qproperty-iconSize: 24px;
+    qproperty-iconSize: 16px;
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
