--- a/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
+++ b/src/MEGASync/gui/ui/MediaTypeFilterWidget.ui
@@ -65,11 +65,11 @@
     border: none;
     text-align: left;
     line-height: 16px;
-    padding-left: 12px;
+    padding-left: 20px;
     padding-right: 12px;
     font-weight: 400;
     color: #FF616366; /*colorToken.text-secondary*/
-    font-size: 10px;
+    font-size: 12px;
 }
 
 #bTitle:enabled:checked
@@ -123,15 +123,24 @@
     height: 34px;
 }
 
+#gbMediaType QPushButton[itsOn=true]
+{
+    font-weight: 600;
+    color: #FF303233; /*colorToken.icon-primary*/
+    border: none;
+    text-align: left;
+    padding-left: -1px;
+    padding-right: 0px;
+}
+
 #gbMediaType QPushButton
 {
-    font-size: 12px;
+    font-weight: 400;
     color: #FF616366; /*colorToken.text-secondary*/
     border: none;
     text-align: left;
     padding-left: -1px;
     padding-right: 0px;
-    qproperty-iconSize: 16px;
 }</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
