--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -904,7 +904,7 @@ margin-bottom: 3px;
               <item>
                <widget class="QPushButton" name="bUpdate">
                 <property name="sizePolicy">
-                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                   <horstretch>0</horstretch>
                   <verstretch>0</verstretch>
                  </sizepolicy>
@@ -1196,7 +1196,7 @@ margin-bottom: 3px;
               <item>
                <widget class="QPushButton" name="bSendBug">
                 <property name="sizePolicy">
-                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                   <horstretch>0</horstretch>
                   <verstretch>0</verstretch>
                  </sizepolicy>
@@ -1391,16 +1391,22 @@ margin-bottom: 3px;
                <layout class="QHBoxLayout" name="horizontalLayout">
                 <item>
                  <widget class="QPushButton" name="bUpgrade">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
-                    <height>26</height>
+                    <height>0</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
                     <width>16777215</width>
-                    <height>26</height>
+                    <height>16777215</height>
                    </size>
                   </property>
                   <property name="cursor">
@@ -1425,16 +1431,22 @@ margin-bottom: 3px;
                 </item>
                 <item>
                  <widget class="QPushButton" name="bMyAccount">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
-                    <height>26</height>
+                    <height>0</height>
                    </size>
                   </property>
                   <property name="maximumSize">
                    <size>
                     <width>16777215</width>
-                    <height>26</height>
+                    <height>16777215</height>
                    </size>
                   </property>
                   <property name="cursor">
@@ -1536,16 +1548,22 @@ margin-bottom: 3px;
             </item>
             <item>
              <widget class="QPushButton" name="bStorageDetails">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>26</height>
+                <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>26</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -2170,16 +2188,22 @@ margin-top: 0px;
             </item>
             <item>
              <widget class="QPushButton" name="bUploadFolder">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>26</height>
+                <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>26</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -2308,16 +2332,22 @@ margin-top: 0px;
             </item>
             <item>
              <widget class="QPushButton" name="bDownloadFolder">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>26</height>
+                <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>26</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -2397,16 +2427,22 @@ margin-top: 0px;
           </item>
           <item>
            <widget class="QPushButton" name="bClearCache">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>26</height>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>26</height>
+              <height>16777215</height>
              </size>
             </property>
             <property name="cursor">
@@ -2581,16 +2617,22 @@ margin-top: 0px;
           </item>
           <item>
            <widget class="QPushButton" name="bClearRemoteCache">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>26</height>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>26</height>
+              <height>16777212</height>
              </size>
             </property>
             <property name="cursor">
@@ -2675,16 +2717,22 @@ margin-top: 0px;
           </item>
           <item>
            <widget class="QPushButton" name="bClearFileVersions">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>26</height>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>26</height>
+              <height>16777212</height>
              </size>
             </property>
             <property name="cursor">
@@ -2861,16 +2909,22 @@ margin-top: 0px;
             </item>
             <item>
              <widget class="QPushButton" name="bOpenBandwidthSettings">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>26</height>
+                <height>0</height>
                </size>
               </property>
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>26</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -2936,15 +2990,15 @@ margin-top: 0px;
           <item>
            <widget class="QPushButton" name="bOpenProxySettings">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
               <horstretch>0</horstretch>
-              <verstretch>26</verstretch>
+              <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>26</height>
+              <height>16777215</height>
              </size>
             </property>
             <property name="cursor">
